refactoring: removed Provider construct and replaced it by AppContextConfig. Removed legacy SearchServiceImpl and CollectionServiceImpl