@@ -27,10 +27,8 @@ import org.edu_sharing.repository.server.importer.RecordHandlerInterfaceBase;
 import org.edu_sharing.repository.server.jobs.helper.NodeHelper;
 import org.edu_sharing.repository.server.tools.ApplicationInfoList;
 import org.edu_sharing.repository.server.tools.cache.RepositoryCache;
-import org.edu_sharing.service.authority.AuthorityServiceFactory;
-import org.edu_sharing.service.permission.PermissionServiceFactory;
+import org.edu_sharing.service.search.SearchService;
 import org.edu_sharing.service.search.SearchServiceElastic;
-import org.edu_sharing.service.search.SearchServiceFactory;
 import org.edu_sharing.service.search.model.SearchToken;
 import org.edu_sharing.service.search.model.SortDefinition;
 import org.edu_sharing.service.toolpermission.ToolPermissionHelper;
@@ -39,6 +37,7 @@ import org.jetbrains.annotations.NotNull;
 import org.json.simple.JSONObject;
 import org.json.simple.parser.JSONParser;
 import org.json.simple.parser.ParseException;
+import org.springframework.context.annotation.Primary;
 import org.springframework.stereotype.Service;
 
 import java.io.InputStream;
@@ -47,6 +46,7 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 @Slf4j
+@Primary
 @Service
 @RequiredArgsConstructor
 public class MediacenterServiceImpl implements MediacenterService {
@@ -59,13 +59,15 @@ public class MediacenterServiceImpl implements MediacenterService {
     private final NodeService nodeService;
     private final OrganisationService eduOrganisationService;
     private final org.edu_sharing.service.authority.AuthorityService authorityService;
-    private final PermissionService permissionService;
+    private final org.alfresco.service.cmr.security.PermissionService alfPermissionService;
+    private final org.edu_sharing.service.permission.PermissionService permissionService;
     private final BehaviourFilter policyBehaviourFilter;
     private final RepositoryCache repositoryCache;
+    private final SearchService searchService;
 
     @NotNull
     public static String getAuthorityScope(String mediacenter) throws Exception {
-        String authorityScope = MediacenterServiceFactory.getLocalService().getMediacenterProxyGroup(mediacenter);
+        String authorityScope = MediacenterServiceFactory.getInstance().getMediacenterProxyGroup(mediacenter);
         if (authorityScope == null) {
             throw new Exception("No mediacenter proxy group found for " + mediacenter);
         }
@@ -75,41 +77,38 @@ public class MediacenterServiceImpl implements MediacenterService {
 
     @Override
     public int importMediacenters(InputStream csv) {
-        RunAsWork<Integer> runAs = new RunAsWork<Integer>() {
-            @Override
-            public Integer doWork() throws Exception {
-                List<List<String>> records = new CSVTool().getRecords(csv, CSVTool.ENC_UTF8);
+        RunAsWork<Integer> runAs = () -> {
+            List<List<String>> records = new CSVTool().getRecords(csv, CSVTool.ENC_UTF8);
 
-                int counter = 0;
-                for (List<String> record : records) {
+            int counter = 0;
+            for (List<String> record : records) {
 
-                    String mzId = record.get(0);
-                    String mz = record.get(1);
-                    String plz = record.get(2);
-                    String ort = record.get(3);
+                String mzId = record.get(0);
+                String mz = record.get(1);
+                String plz = record.get(2);
+                String ort = record.get(3);
 
-                    try {
+                try {
 
-                        String authorityName = AuthorityService.MEDIA_CENTER_GROUP_TYPE + "_" + mzId;
-                        log.info("managing:" + authorityName);
+                    String authorityName = AuthorityService.MEDIA_CENTER_GROUP_TYPE + "_" + mzId;
+                    log.info("managing:" + authorityName);
 
-                        if (alfAuthorityService.authorityExists("GROUP_" + authorityName)) {
-                            log.info("authority already exists:" + authorityName);
-                            updateMediacenter("GROUP_" + authorityName, mz, plz, ort, null, null, null, true);
-                            continue;
-                        }
-
-                        createMediacenter(mzId, mz, plz, ort);
-
-
-                        counter++;
-                    } catch (Exception e) {
-                        log.error("error in record: {}", record.isEmpty() ? null : record.get(0), e);
-                        throw e;
+                    if (alfAuthorityService.authorityExists("GROUP_" + authorityName)) {
+                        log.info("authority already exists:" + authorityName);
+                        updateMediacenter("GROUP_" + authorityName, mz, plz, ort, null, null, null, true);
+                        continue;
                     }
+
+                    createMediacenter(mzId, mz, plz, ort);
+
+
+                    counter++;
+                } catch (Exception e) {
+                    log.error("error in record: {}", record.isEmpty() ? null : record.get(0), e);
+                    throw e;
                 }
-                return counter;
             }
+            return counter;
         };
 
         return AuthenticationUtil.runAs(runAs, ApplicationInfoList.getHomeRepository().getUsername());
@@ -155,25 +154,17 @@ public class MediacenterServiceImpl implements MediacenterService {
 
         String authorityName = AuthorityService.MEDIA_CENTER_GROUP_TYPE + "_" + id;
 
-        /**
-         * create mediacenter group
-         */
+        // * create mediacenter group
         String alfAuthorityName = alfAuthorityService.createAuthority(AuthorityType.GROUP, authorityName);
         alfAuthorityService.setAuthorityDisplayName(alfAuthorityName, displayName);
 
-        /**
-         * create mediacenter admin group
-         */
+        // * create mediacenter admin group
         createMediacenterAdminGroup(alfAuthorityName, displayName);
 
-        /**
-         * create mediacenter proxy group
-         */
+        // * create mediacenter proxy group
         createMediacenterProxyGroup(alfAuthorityName, displayName);
 
-        /**
-         * add mediacenter metadata
-         */
+        // * add mediacenter metadata
         NodeRef authorityNodeRef = alfAuthorityService.getAuthorityNodeRef(alfAuthorityName);
 
         Map<QName, Serializable> groupExtProps = new HashMap<>();
@@ -197,74 +188,71 @@ public class MediacenterServiceImpl implements MediacenterService {
 
     @Override
     public int importOrganisations(InputStream csv) {
-        RunAsWork<Integer> runAs = new RunAsWork<Integer>() {
-            @Override
-            public Integer doWork() throws Exception {
-                List<List<String>> records = new CSVTool().getRecords(csv, CSVTool.ENC_UTF8);
+        RunAsWork<Integer> runAs = () -> {
+            List<List<String>> records = new CSVTool().getRecords(csv, CSVTool.ENC_UTF8);
 
-                int counter = 0;
-                for (List<String> record : records) {
-                    String schoolId = record.get(0);
-                    String schoolName = record.get(1);
-                    String plz = (record.size() > 2) ? record.get(2) : null;
-                    String city = (record.size() > 3) ? record.get(3) : null;
+            int counter = 0;
+            for (List<String> record : records) {
+                String schoolId = record.get(0);
+                String schoolName = record.get(1);
+                String plz = (record.size() > 2) ? record.get(2) : null;
+                String city = (record.size() > 3) ? record.get(3) : null;
 
-                    try {
-                        if (StringUtils.isBlank(schoolId)) {
-                            log.info("no schoolid provided:{}", record);
-                            continue;
-                        }
-
-                        if (alfAuthorityService.authorityExists("GROUP_ORG_" + schoolId)) {
-                            log.info("authority already exists:{}", schoolId);
-                            NodeRef authorityNodeRef = alfAuthorityService.getAuthorityNodeRef("GROUP_ORG_" + schoolId);
-                            String alfAuthorityName = (String) nodeService.getProperty(authorityNodeRef, QName.createQName(CCConstants.CM_PROP_AUTHORITY_AUTHORITYNAME));
-                            String currentDisplayName = (String) nodeService.getProperty(authorityNodeRef, QName.createQName(CCConstants.CM_PROP_AUTHORITY_AUTHORITYDISPLAYNAME));
-                            String currentCity = (String) nodeService.getProperty(authorityNodeRef, QName.createQName(CCConstants.CCM_PROP_ADDRESS_CITY));
-                            String currentPLZ = (String) nodeService.getProperty(authorityNodeRef, QName.createQName(CCConstants.CCM_PROP_ADDRESS_POSTALCODE));
-
-                            if (schoolName != null && !schoolName.equals(currentDisplayName)) {
-                                alfAuthorityService.setAuthorityDisplayName(alfAuthorityName, schoolName);
-                                String authorityNameOrgAdmin = eduOrganisationService.getOrganisationAdminGroup(alfAuthorityName);
-                                if (authorityNameOrgAdmin != null) {
-                                    alfAuthorityService.setAuthorityDisplayName(authorityNameOrgAdmin, schoolName + AuthorityService.ADMINISTRATORS_GROUP_DISPLAY_POSTFIX);
-                                }
-                            }
-
-                            if (city != null && !city.equals(currentCity)) {
-                                nodeService.setProperty(authorityNodeRef, QName.createQName(CCConstants.CCM_PROP_ADDRESS_CITY), currentCity);
-                            }
-
-                            if (plz != null && !plz.equals(currentPLZ)) {
-                                nodeService.setProperty(authorityNodeRef, QName.createQName(CCConstants.CCM_PROP_ADDRESS_POSTALCODE), plz);
-                            }
-
-                            continue;
-                        }
-
-                        log.info("creating: {} {}", schoolId, schoolName);
-                        String organisationName = eduOrganisationService.createOrganization(schoolId, schoolName);
-
-                        String authorityName = PermissionService.GROUP_PREFIX + organisationName;
-
-                        authorityService.addAuthorityAspect(authorityName, CCConstants.CCM_ASPECT_ADDRESS);
-                        authorityService.setAuthorityProperty(authorityName, CCConstants.CCM_PROP_ADDRESS_POSTALCODE,
-                                plz);
-                        authorityService.setAuthorityProperty(authorityName, CCConstants.CCM_PROP_ADDRESS_CITY, city);
-
-
-                        counter++;
-                    } catch (DuplicateChildNodeNameException e) {
-                        log.error("error in record: {} Folder already exists", record.isEmpty() ? null : record.get(0), e);
-                    } catch (Exception e) {
-                        log.error("error in record: {}", record.isEmpty() ? null : record.get(0), e);
-                        throw e;
+                try {
+                    if (StringUtils.isBlank(schoolId)) {
+                        log.info("no schoolid provided:{}", record);
+                        continue;
                     }
 
+                    if (alfAuthorityService.authorityExists("GROUP_ORG_" + schoolId)) {
+                        log.info("authority already exists:{}", schoolId);
+                        NodeRef authorityNodeRef = alfAuthorityService.getAuthorityNodeRef("GROUP_ORG_" + schoolId);
+                        String alfAuthorityName = (String) nodeService.getProperty(authorityNodeRef, QName.createQName(CCConstants.CM_PROP_AUTHORITY_AUTHORITYNAME));
+                        String currentDisplayName = (String) nodeService.getProperty(authorityNodeRef, QName.createQName(CCConstants.CM_PROP_AUTHORITY_AUTHORITYDISPLAYNAME));
+                        String currentCity = (String) nodeService.getProperty(authorityNodeRef, QName.createQName(CCConstants.CCM_PROP_ADDRESS_CITY));
+                        String currentPLZ = (String) nodeService.getProperty(authorityNodeRef, QName.createQName(CCConstants.CCM_PROP_ADDRESS_POSTALCODE));
+
+                        if (schoolName != null && !schoolName.equals(currentDisplayName)) {
+                            alfAuthorityService.setAuthorityDisplayName(alfAuthorityName, schoolName);
+                            String authorityNameOrgAdmin = eduOrganisationService.getOrganisationAdminGroup(alfAuthorityName);
+                            if (authorityNameOrgAdmin != null) {
+                                alfAuthorityService.setAuthorityDisplayName(authorityNameOrgAdmin, schoolName + AuthorityService.ADMINISTRATORS_GROUP_DISPLAY_POSTFIX);
+                            }
+                        }
+
+                        if (city != null && !city.equals(currentCity)) {
+                            nodeService.setProperty(authorityNodeRef, QName.createQName(CCConstants.CCM_PROP_ADDRESS_CITY), currentCity);
+                        }
+
+                        if (plz != null && !plz.equals(currentPLZ)) {
+                            nodeService.setProperty(authorityNodeRef, QName.createQName(CCConstants.CCM_PROP_ADDRESS_POSTALCODE), plz);
+                        }
+
+                        continue;
+                    }
+
+                    log.info("creating: {} {}", schoolId, schoolName);
+                    String organisationName = eduOrganisationService.createOrganization(schoolId, schoolName);
+
+                    String authorityName = PermissionService.GROUP_PREFIX + organisationName;
+
+                    authorityService.addAuthorityAspect(authorityName, CCConstants.CCM_ASPECT_ADDRESS);
+                    authorityService.setAuthorityProperty(authorityName, CCConstants.CCM_PROP_ADDRESS_POSTALCODE,
+                            plz);
+                    authorityService.setAuthorityProperty(authorityName, CCConstants.CCM_PROP_ADDRESS_CITY, city);
+
+
+                    counter++;
+                } catch (DuplicateChildNodeNameException e) {
+                    log.error("error in record: {} Folder already exists", record.isEmpty() ? null : record.get(0), e);
+                } catch (Exception e) {
+                    log.error("error in record: {}", record.isEmpty() ? null : record.get(0), e);
+                    throw e;
                 }
 
-                return counter;
             }
+
+            return counter;
         };
 
         return AuthenticationUtil.runAs(runAs, ApplicationInfoList.getHomeRepository().getUsername());
@@ -272,149 +260,140 @@ public class MediacenterServiceImpl implements MediacenterService {
 
     @Override
     public int importOrgMcConnections(InputStream csv, boolean removeSchoolsFromMC) {
-        RunAsWork<Integer> runAs = new RunAsWork<Integer>() {
-            @Override
-            public Integer doWork() throws Exception {
+        RunAsWork<Integer> runAs = () -> {
 
-                List<List<String>> records = new CSVTool().getRecords(csv, CSVTool.ENC_UTF8);
+            List<List<String>> records = new CSVTool().getRecords(csv, CSVTool.ENC_UTF8);
 
-                /**
-                 * remove schools from mediacenter
-                 */
-                if (removeSchoolsFromMC) {
+            // * remove schools from mediacenter
+            if (removeSchoolsFromMC) {
 
-                    Map<String, List<String>> newMZsAndSchools = listToUniqueMap(records);
+                Map<String, List<String>> newMZsAndSchools = listToUniqueMap(records);
 
-                    /**
-                     * get existing mediacenters
-                     */
-                    {
+                // * get existing mediacenters
+                {
 
-                        SearchToken searchToken = new SearchToken();
-                        searchToken.setElasticIndex(SearchServiceElastic.AUTHORITIES_INDEX);
-                        searchToken.setFrom(0);
-                        searchToken.setElasticQuery(QueryBuilders.term().field("aspects").value("ccm:mediacenter").build());
-                        org.edu_sharing.service.search.SearchService searchService = SearchServiceFactory.getLocalService();
-                        SearchResultNodeRef result = searchService.search(searchToken);
+                    SearchToken searchToken = new SearchToken();
+                    searchToken.setElasticIndex(SearchServiceElastic.AUTHORITIES_INDEX);
+                    searchToken.setFrom(0);
+                    searchToken.setElasticQuery(QueryBuilders.term().field("aspects").value("ccm:mediacenter").build());
+                    SearchResultNodeRef result = searchService.search(searchToken);
 
-                        if (result.getNodeCount() < 1) {
-                            log.error("no mediacenters found");
-                        } else {
-                            Map<String, List<String>> existingMZsAndSchools = new HashMap<>();
-                            result.getData().forEach(n -> {
-                                NodeRef mzNodeRef = new NodeRef(new StoreRef(n.getStoreProtocol(), n.getStoreId()), n.getNodeId());
-                                String authorityName = (String) nodeService.getProperty(mzNodeRef, ContentModel.PROP_AUTHORITY_NAME);
-                                String mzId = authorityName.replace("GROUP_MEDIA_CENTER_", "");
-                                try {
-                                    Integer.parseInt(mzId);
-                                    Set<String> mzContains = alfAuthorityService.getContainedAuthorities(AuthorityType.GROUP, authorityName, true);
+                    if (result.getNodeCount() < 1) {
+                        log.error("no mediacenters found");
+                    } else {
+                        Map<String, List<String>> existingMZsAndSchools = new HashMap<>();
+                        result.getData().forEach(n -> {
+                            NodeRef mzNodeRef = new NodeRef(new StoreRef(n.getStoreProtocol(), n.getStoreId()), n.getNodeId());
+                            String authorityName = (String) nodeService.getProperty(mzNodeRef, ContentModel.PROP_AUTHORITY_NAME);
+                            String mzId = authorityName.replace("GROUP_MEDIA_CENTER_", "");
+                            try {
+                                Integer.parseInt(mzId);
+                                Set<String> mzContains = alfAuthorityService.getContainedAuthorities(AuthorityType.GROUP, authorityName, true);
 
-                                    for (String schoolAuthorityName : mzContains) {
-                                        //"GROUP_ORG_" + schoolId
-                                        NodeRef nodeRef = alfAuthorityService.getAuthorityNodeRef(schoolAuthorityName);
+                                for (String schoolAuthorityName : mzContains) {
+                                    //"GROUP_ORG_" + schoolId
+                                    NodeRef nodeRef = alfAuthorityService.getAuthorityNodeRef(schoolAuthorityName);
 
-                                        if (nodeRef == null) {
-                                            log.info("authority does not exist:{}", schoolAuthorityName);
-                                            continue;
-                                        }
-                                        if (!nodeService.hasAspect(nodeRef, QName.createQName(CCConstants.CCM_ASPECT_EDUGROUP))) {
-                                            log.debug("authority is no edugroup:{}", schoolAuthorityName);
-                                            continue;
-                                        }
-
-                                        String schoolId = schoolAuthorityName.replace("GROUP_ORG_", "");
-
-                                        List<String> schools = existingMZsAndSchools.get(mzId);
-                                        if (schools == null) {
-                                            schools = new ArrayList<>();
-                                        }
-                                        if (!schools.contains(schoolId)) {
-                                            schools.add(schoolId);
-                                        }
-                                        existingMZsAndSchools.put(mzId, schools);
+                                    if (nodeRef == null) {
+                                        log.info("authority does not exist:{}", schoolAuthorityName);
+                                        continue;
                                     }
-                                } catch (NumberFormatException e) {
-                                    log.info("authorityName:{} mzId:{} is no number", authorityName, mzId);
-                                }
-                            });
-
-                            for (Map.Entry<String, List<String>> mzAndSchools : existingMZsAndSchools.entrySet()) {
-                                List<String> newSchools = newMZsAndSchools.get(mzAndSchools.getKey());
-                                if (newSchools == null) {
-                                    log.info("existing mz:{} has a null school list in new sheet", mzAndSchools.getKey());
-                                    newSchools = new ArrayList<>();
-                                }
-
-                                if (mzAndSchools.getValue() == null) {
-                                    log.info("existing mz:{} has a null school list", mzAndSchools.getKey());
-                                    continue;
-                                }
-
-
-                                for (String existingSchoolId : mzAndSchools.getValue()) {
-                                    if (!newSchools.contains(existingSchoolId)) {
-                                        String mzAuthorityName = "GROUP_MEDIA_CENTER_" + mzAndSchools.getKey();
-                                        String schoolAuthorityName = "GROUP_ORG_" + existingSchoolId;
-                                        log.info("removing school {} from {} cause its not in imported list", schoolAuthorityName, mzAuthorityName);
-                                        alfAuthorityService.removeAuthority(mzAuthorityName, schoolAuthorityName);
+                                    if (!nodeService.hasAspect(nodeRef, QName.createQName(CCConstants.CCM_ASPECT_EDUGROUP))) {
+                                        log.debug("authority is no edugroup:{}", schoolAuthorityName);
+                                        continue;
                                     }
+
+                                    String schoolId = schoolAuthorityName.replace("GROUP_ORG_", "");
+
+                                    List<String> schools = existingMZsAndSchools.get(mzId);
+                                    if (schools == null) {
+                                        schools = new ArrayList<>();
+                                    }
+                                    if (!schools.contains(schoolId)) {
+                                        schools.add(schoolId);
+                                    }
+                                    existingMZsAndSchools.put(mzId, schools);
+                                }
+                            } catch (NumberFormatException e) {
+                                log.info("authorityName:{} mzId:{} is no number", authorityName, mzId);
+                            }
+                        });
+
+                        for (Map.Entry<String, List<String>> mzAndSchools : existingMZsAndSchools.entrySet()) {
+                            List<String> newSchools = newMZsAndSchools.get(mzAndSchools.getKey());
+                            if (newSchools == null) {
+                                log.info("existing mz:{} has a null school list in new sheet", mzAndSchools.getKey());
+                                newSchools = new ArrayList<>();
+                            }
+
+                            if (mzAndSchools.getValue() == null) {
+                                log.info("existing mz:{} has a null school list", mzAndSchools.getKey());
+                                continue;
+                            }
+
+
+                            for (String existingSchoolId : mzAndSchools.getValue()) {
+                                if (!newSchools.contains(existingSchoolId)) {
+                                    String mzAuthorityName = "GROUP_MEDIA_CENTER_" + mzAndSchools.getKey();
+                                    String schoolAuthorityName = "GROUP_ORG_" + existingSchoolId;
+                                    log.info("removing school {} from {} cause its not in imported list", schoolAuthorityName, mzAuthorityName);
+                                    alfAuthorityService.removeAuthority(mzAuthorityName, schoolAuthorityName);
                                 }
                             }
                         }
                     }
                 }
-
-
-                int counter = 0;
-                for (List<String> record : records) {
-                    String mzId = record.get(0);
-                    String schoolId = record.get(1);
-
-
-                    SearchToken searchToken = new SearchToken();
-                    searchToken.setFrom(0);
-                    searchToken.setElasticIndex(SearchServiceElastic.AUTHORITIES_INDEX);
-                    searchToken.setElasticQuery(QueryBuilders.bool()
-                            .must(m -> m.term(t -> t.field("aspects").value("ccm:mediacenter")))
-                            .must(m -> m.term(t -> t.field("properties.ccm:mediacenterId").value(mzId))).build());
-                    searchToken.setMaxResult(1);
-                    org.edu_sharing.service.search.SearchService searchService = SearchServiceFactory.getLocalService();
-                    SearchResultNodeRef result = searchService.search(searchToken);
-                    if (result.getNodeCount() < 1) {
-                        log.error("no mediacenter found for {}", mzId);
-                        continue;
-                    }
-
-                    NodeRef nodeRefAuthorityMediacenter = result.getData().stream()
-                            .findFirst()
-                            .map(n -> new NodeRef(new StoreRef(n.getStoreProtocol(), n.getStoreId()), n.getNodeId()))
-                            .get();
-
-
-                    String authorityNameSchool = "GROUP_ORG_" + schoolId;
-
-                    //check if school exists
-                    if (!alfAuthorityService.authorityExists(authorityNameSchool)) {
-                        log.error("no school found for {} {}", schoolId, authorityNameSchool);
-                        continue;
-                    }
-
-                    String authorityNameMZ = (String) nodeService.getProperty(nodeRefAuthorityMediacenter, ContentModel.PROP_AUTHORITY_NAME);
-
-
-                    Set<String> mzContains = alfAuthorityService.getContainedAuthorities(AuthorityType.GROUP, authorityNameMZ, true);
-
-                    if (!mzContains.contains(authorityNameSchool)) {
-                        log.info("adding school{} to MZ {}", authorityNameSchool, authorityNameMZ);
-                        alfAuthorityService.addAuthority(authorityNameMZ, authorityNameSchool);
-                        counter++;
-                    } else {
-                        log.info("mediacenter:{} already contains {}", authorityNameMZ, authorityNameSchool);
-                    }
-
-                }
-                return counter;
             }
+
+
+            int counter = 0;
+            for (List<String> record : records) {
+                String mzId = record.get(0);
+                String schoolId = record.get(1);
+
+
+                SearchToken searchToken = new SearchToken();
+                searchToken.setFrom(0);
+                searchToken.setElasticIndex(SearchServiceElastic.AUTHORITIES_INDEX);
+                searchToken.setElasticQuery(QueryBuilders.bool()
+                        .must(m -> m.term(t -> t.field("aspects").value("ccm:mediacenter")))
+                        .must(m -> m.term(t -> t.field("properties.ccm:mediacenterId").value(mzId))).build());
+                searchToken.setMaxResult(1);
+                SearchResultNodeRef result = searchService.search(searchToken);
+                if (result.getNodeCount() < 1) {
+                    log.error("no mediacenter found for {}", mzId);
+                    continue;
+                }
+
+                NodeRef nodeRefAuthorityMediacenter = result.getData().stream()
+                        .findFirst()
+                        .map(n -> new NodeRef(new StoreRef(n.getStoreProtocol(), n.getStoreId()), n.getNodeId()))
+                        .get();
+
+
+                String authorityNameSchool = "GROUP_ORG_" + schoolId;
+
+                //check if school exists
+                if (!alfAuthorityService.authorityExists(authorityNameSchool)) {
+                    log.error("no school found for {} {}", schoolId, authorityNameSchool);
+                    continue;
+                }
+
+                String authorityNameMZ = (String) nodeService.getProperty(nodeRefAuthorityMediacenter, ContentModel.PROP_AUTHORITY_NAME);
+
+
+                Set<String> mzContains = alfAuthorityService.getContainedAuthorities(AuthorityType.GROUP, authorityNameMZ, true);
+
+                if (!mzContains.contains(authorityNameSchool)) {
+                    log.info("adding school{} to MZ {}", authorityNameSchool, authorityNameMZ);
+                    alfAuthorityService.addAuthority(authorityNameMZ, authorityNameSchool);
+                    counter++;
+                } else {
+                    log.info("mediacenter:{} already contains {}", authorityNameMZ, authorityNameSchool);
+                }
+
+            }
+            return counter;
         };
 
         return AuthenticationUtil.runAs(runAs, ApplicationInfoList.getHomeRepository().getUsername());
@@ -452,7 +431,7 @@ public class MediacenterServiceImpl implements MediacenterService {
 
     public void isAllowedToManage(String authorityName) {
 
-        if (org.edu_sharing.service.authority.AuthorityServiceFactory.getLocalService().isGlobalAdmin()) {
+        if (authorityService.isGlobalAdmin()) {
             return;
         }
 
@@ -471,7 +450,7 @@ public class MediacenterServiceImpl implements MediacenterService {
 
         String mediacenterId = getMediacenterId(alfAuthorityName);
         String mediacenterProxyName = AuthorityService.MEDIA_CENTER_PROXY_GROUP_TYPE + "_" + mediacenterId;
-        AuthorityServiceFactory.getLocalService().createGroupWithType(
+        authorityService.createGroupWithType(
                 mediacenterProxyName,
                 displayName + AuthorityService.MEDIA_CENTER_PROXY_DISPLAY_POSTFIX,
                 null,
@@ -482,7 +461,7 @@ public class MediacenterServiceImpl implements MediacenterService {
     }
 
     public void createMediacenterAdminGroup(String alfAuthorityName, String displayName) throws Exception {
-        AuthorityServiceFactory.getLocalService().createGroupWithType(
+        authorityService.createGroupWithType(
                 AuthorityService.MEDIACENTER_ADMINISTRATORS_GROUP,
                 displayName + AuthorityService.ADMINISTRATORS_GROUP_DISPLAY_POSTFIX,
                 alfAuthorityName.replace("GROUP_", ""),
@@ -510,7 +489,7 @@ public class MediacenterServiceImpl implements MediacenterService {
     public List<String> getMediacenterAuthoritiesByNode(String nodeId) throws Exception {
         List<String> allMediacenterIds = getAllMediacenterIds();
 
-        return Arrays.stream(PermissionServiceFactory.getLocalService().getPermissions(nodeId).getAces())
+        return Arrays.stream(permissionService.getPermissions(nodeId).getAces())
                 .map(ACE::getAuthority)
                 .filter(x -> x.startsWith(PermissionService.GROUP_PREFIX + AuthorityService.MEDIA_CENTER_PROXY_GROUP_TYPE))
                 .map(this::getMediacenterIdFromProxyGroup)
@@ -543,11 +522,7 @@ public class MediacenterServiceImpl implements MediacenterService {
             return false;
         }
 
-        if (containedAuthorities.contains(authorityName)) {
-            return true;
-        } else {
-            return false;
-        }
+        return containedAuthorities.contains(authorityName);
 
     }
 
@@ -594,7 +569,7 @@ public class MediacenterServiceImpl implements MediacenterService {
 
     boolean hasPermissionSet(NodeRef nodeRef, String authority, String permission) {
         boolean hasPermission = false;
-        Set<AccessPermission> permissionsSet = permissionService.getAllSetPermissions(nodeRef);
+        Set<AccessPermission> permissionsSet = alfPermissionService.getAllSetPermissions(nodeRef);
 
         for (AccessPermission ap : permissionsSet) {
             if (authority.equals(ap.getAuthority())
@@ -612,11 +587,7 @@ public class MediacenterServiceImpl implements MediacenterService {
 
     boolean hasPermission(NodeRef nodeRef, String authority, String permission) {
         AuthenticationUtil.RunAsWork<Boolean> runAs = () -> {
-            if (permissionService.hasPermission(nodeRef, permission) == AccessStatus.ALLOWED) {
-                return true;
-            } else {
-                return false;
-            }
+            return alfPermissionService.hasPermission(nodeRef, permission) == AccessStatus.ALLOWED;
         };
         return AuthenticationUtil.runAs(runAs, authority);
     }
@@ -687,8 +658,8 @@ public class MediacenterServiceImpl implements MediacenterService {
                 log.info("process add changes for {}", mediacenter);
                 for (NodeRef nodeRef : entry.getValue()) {
                     policyBehaviourFilter.disableBehaviour(nodeRef);
-                    permissionService.setPermission(nodeRef, mediacenter, CCConstants.PERMISSION_CONSUMER, true);
-                    permissionService.setPermission(nodeRef, mediacenter, CCConstants.PERMISSION_CC_PUBLISH, true);
+                    alfPermissionService.setPermission(nodeRef, mediacenter, CCConstants.PERMISSION_CONSUMER, true);
+                    alfPermissionService.setPermission(nodeRef, mediacenter, CCConstants.PERMISSION_CC_PUBLISH, true);
                     policyBehaviourFilter.enableBehaviour(nodeRef);
 
                 }
@@ -699,8 +670,8 @@ public class MediacenterServiceImpl implements MediacenterService {
                 log.info("process remove changes for {}", mediacenter);
                 for (NodeRef nodeRef : entry.getValue()) {
                     policyBehaviourFilter.disableBehaviour(nodeRef);
-                    permissionService.deletePermission(nodeRef, mediacenter, CCConstants.PERMISSION_CONSUMER);
-                    permissionService.deletePermission(nodeRef, mediacenter, CCConstants.PERMISSION_CC_PUBLISH);
+                    alfPermissionService.deletePermission(nodeRef, mediacenter, CCConstants.PERMISSION_CONSUMER);
+                    alfPermissionService.deletePermission(nodeRef, mediacenter, CCConstants.PERMISSION_CC_PUBLISH);
                     policyBehaviourFilter.enableBehaviour(nodeRef);
                 }
             }
@@ -754,19 +725,19 @@ public class MediacenterServiceImpl implements MediacenterService {
                     policyBehaviourFilter.disableBehaviour(nodeRef);
                     if (!hasPublishPermission) {
                         log.info(mediacenterProxyName + " add publish permission for " + nodeRef);
-                        permissionService.setPermission(nodeRef, mediacenterProxyName, CCConstants.PERMISSION_CONSUMER, true);
+                        alfPermissionService.setPermission(nodeRef, mediacenterProxyName, CCConstants.PERMISSION_CONSUMER, true);
                     }
                     if (!hasConsumerPermission) {
                         log.info(mediacenterProxyName + " add consumer permission for " + nodeRef);
-                        permissionService.setPermission(nodeRef, mediacenterProxyName, CCConstants.PERMISSION_CC_PUBLISH, true);
+                        alfPermissionService.setPermission(nodeRef, mediacenterProxyName, CCConstants.PERMISSION_CC_PUBLISH, true);
                     }
                     if (!hasPublishPermissionAdmin) {
                         log.info(mediacenterAdminGroup + " add publish permission for " + nodeRef);
-                        permissionService.setPermission(nodeRef, mediacenterAdminGroup, CCConstants.PERMISSION_CC_PUBLISH, true);
+                        alfPermissionService.setPermission(nodeRef, mediacenterAdminGroup, CCConstants.PERMISSION_CC_PUBLISH, true);
                     }
                     if (!hasConsumerPermissionAdmin) {
                         log.info(mediacenterAdminGroup + " add consumer permission for " + nodeRef);
-                        permissionService.setPermission(nodeRef, mediacenterAdminGroup, CCConstants.PERMISSION_CONSUMER, true);
+                        alfPermissionService.setPermission(nodeRef, mediacenterAdminGroup, CCConstants.PERMISSION_CONSUMER, true);
                     }
                     policyBehaviourFilter.enableBehaviour(nodeRef);
                     return null;
@@ -799,7 +770,7 @@ public class MediacenterServiceImpl implements MediacenterService {
                     retryingTransactionHelper.doInTransaction(() -> {
                         policyBehaviourFilter.disableBehaviour(nodeRef);
                         log.info(mediacenterProxyName + " remove publish permission for " + nodeRef);
-                        permissionService.deletePermission(nodeRef, mediacenterProxyName, CCConstants.PERMISSION_CC_PUBLISH);
+                        alfPermissionService.deletePermission(nodeRef, mediacenterProxyName, CCConstants.PERMISSION_CC_PUBLISH);
                         policyBehaviourFilter.enableBehaviour(nodeRef);
                         return null;
                     });
@@ -808,7 +779,7 @@ public class MediacenterServiceImpl implements MediacenterService {
                     retryingTransactionHelper.doInTransaction(() -> {
                         policyBehaviourFilter.disableBehaviour(nodeRef);
                         log.info(mediacenterProxyName + " remove consumer permission for " + nodeRef);
-                        permissionService.deletePermission(nodeRef, mediacenterProxyName, CCConstants.PERMISSION_CONSUMER);
+                        alfPermissionService.deletePermission(nodeRef, mediacenterProxyName, CCConstants.PERMISSION_CONSUMER);
                         policyBehaviourFilter.enableBehaviour(nodeRef);
                         return null;
                     });
@@ -816,11 +787,11 @@ public class MediacenterServiceImpl implements MediacenterService {
 
                 if (!hasPublishPermissionAdmin) {
                     log.info(mediacenterAdminGroup + " add publish permission for " + nodeRef);
-                    permissionService.setPermission(nodeRef, mediacenterAdminGroup, CCConstants.PERMISSION_CC_PUBLISH, true);
+                    alfPermissionService.setPermission(nodeRef, mediacenterAdminGroup, CCConstants.PERMISSION_CC_PUBLISH, true);
                 }
                 if (!hasConsumerPermissionAdmin) {
                     log.info(mediacenterAdminGroup + " add consumer permission for " + nodeRef);
-                    permissionService.setPermission(nodeRef, mediacenterAdminGroup, CCConstants.PERMISSION_CONSUMER, true);
+                    alfPermissionService.setPermission(nodeRef, mediacenterAdminGroup, CCConstants.PERMISSION_CONSUMER, true);
                 }
 
                 fixMediacenterStatus(nodeRef, mediacenterGroupName, false);
@@ -849,7 +820,7 @@ public class MediacenterServiceImpl implements MediacenterService {
                     log.error(e.getMessage());
                     return o;
                 }
-            }).collect(Collectors.toList()));
+            }).toList());
         } else {
             mcStatusListNew.addAll(mcStatusList);
             mcStatusListNew.add(jo.toJSONString());
@@ -925,7 +896,6 @@ public class MediacenterServiceImpl implements MediacenterService {
 
     @Override
     public List<org.edu_sharing.service.model.NodeRef> getAllLicensedNodes(String mediacenter, Map<String, String[]> criteria, SortDefinition sortDefinition) throws Throwable {
-        List<org.edu_sharing.service.model.NodeRef> data = new ArrayList<>();
         SearchToken searchToken = new SearchToken();
         searchToken.setAuthorityScope(Collections.singletonList(getAuthorityScope(mediacenter)));
         searchToken.setFacets(new ArrayList<>());
@@ -933,8 +903,8 @@ public class MediacenterServiceImpl implements MediacenterService {
         if (sortDefinition != null) {
             searchToken.setSortDefinition(sortDefinition);
         }
-        if (SearchServiceFactory.getLocalService() instanceof SearchServiceElastic) {
-            return ((SearchServiceElastic) SearchServiceFactory.getLocalService()).searchAll(MetadataHelper.getLocalDefaultMetadataset(), "mediacenter_filter", criteria, searchToken);
+        if (searchService instanceof SearchServiceElastic) {
+            return ((SearchServiceElastic)searchService).searchAll(MetadataHelper.getLocalDefaultMetadataset(), "mediacenter_filter", criteria, searchToken);
         } else {
             throw new RuntimeException("getAllLicensedNodes requires Elasticsearch");
         }
